# HiddenSparkle

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: ci.yml
cmake/: SparkleConfig.cmake.in  add_coverage.cmake  add_resources.cmake
docs/: mainpage.md
includes/: sparkle.hpp
playground/: CMakeLists.txt
playground/includes/: playground.hpp
playground/srcs/: main.cpp
resources/: test.txt
srcs/: first_function.cpp
tests/: CMakeLists.txt
tests/TUs/: CMakeLists.txt
tests/TUs/srcs/: first_function_test.cpp
tools/resourcesConverter/: main.cpp
